nefcloud/traefik/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.nefcloud.top`)
      middlewares:
        - name: google
          namespace: oauth2-proxy
      services:
        - kind: TraefikService
          name: api@internal
